<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EventsListActivity">

    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
        android:id="@+id/activityMainAtcEventUserId"
        android:layout_width="229dp"
        android:layout_height="44dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:hint="@string/event_user_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activityMainRcyMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityMainAtcEventUserId"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_events_list" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="138dp"
        android:layout_height="99dp"
        android:contentDescription="@string/course_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_course_logo_foreground" />

    <TextView
        android:id="@+id/screen_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/my_events"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/searchButton"
        android:layout_width="47dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/search"
        app:layout_constraintBottom_toBottomOf="@+id/activityMainAtcEventUserId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/activityMainAtcEventUserId"
        app:layout_constraintTop_toBottomOf="@+id/screen_tittle"
        app:layout_constraintVertical_bias="0.25"
        app:srcCompat="@android:drawable/ic_search_category_default" />

    <ImageButton
        android:id="@+id/createEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/activityMainAtcEventUserId"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:src="@drawable/ic_add" />


</androidx.constraintlayout.widget.ConstraintLayout>

